css/main.css
html {
  box-sizing: border-box;
  line-height: 1.5;
  text-align: center;
  list-style-type: none;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

.links {
  margin: .3em;
  padding: 0;
  text-align: center;
}

img {
  display: block;
  width: 100%;
}

header {
  background-color: #ffe500;
}

h1 {
  color: #b20953;
  font-family: "Sigmar One", sans-serif;
  font-size: 3rem;
  margin: 0;
}

h2 {
  color: #cc1465;
  font-family: "Sigmar One", sans-serif;
  font-size: 1.875rem;
  margin: 0;
}
footer {
  background-color: #ffe500;
  font-size: .75rem;
}

.text {
  background-color: #fff;
}

.links a {
  display: inline-block;
  padding: 0 .75em;
  background-color: #b2a212;
  border-radius: 3px;
  text-decoration: none;
  color: #fff;
}

.links li {
  display: inline-block;
  max-width: 20em;
}

a:hover {
  background-color: #b20953;
}

